# omre

./: .gitignore  .gitmodules  README.md
ide/clion/: C_File_Header.txt  cpp_code_style.xml  cpp_inspections.xml
libs/math/: CMakeLists.txt
libs/math/include/math/: TMatHelpers.h  TQuatHelpers.h  TVecHelpers.h  compiler.h  fast.h  half.h  mat2.h  mat3.h  mat4.h  mathfwd.h  norm.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
libs/math/src/: dummy.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: Allocator.h  BitmaskEnum.h  CString.h  CallStack.h  Condition.h  CountDownLatch.h  CyclicBarrier.h  FixedCapacityVector.h  GuidUtils.h  JNIHelp.h  Log.h  Mutex.h  Panic.h  Path.h  Profiler.h  RWLock.h  Range.h  SpinLock.h  Systrace.h  Thread.h  ThreadLocal.h  ThreadUtils.h  VirtualMachineEnv.h  algorithm.h  api_level.h  arraysize.h  ashmem.h  bitset.h  compiler.h  compressed_pair.h  debug.h  export.h  inline.h  memalign.h  ostream.h  sstream.h  time.h  trap.h
libs/utils/include/utils/generic/: Condition.h  Mutex.h
libs/utils/include/utils/linux/: Condition.h  Mutex.h
libs/utils/include/utils/win32/: stdtypes.h
libs/utils/src/: CString.cpp  CallStack.cpp  CountDownLatch.cpp  CyclicBarrier.cpp  GuidUtils.cpp  Log.cpp  Panic.cpp  Path.cpp  Profiler.cpp  RWLock.cpp  Systrace.cpp  Thread.cpp  ThreadUtils.cpp  api_level.cpp  ashmem.cpp  debug.cpp  ostream.cpp  sstream.cpp  time.cpp
libs/utils/src/android/: AndroidLog.h  JNIHelp.cpp  VirtualMachineEnv.cpp
libs/utils/src/darwin/: Path.mm
libs/utils/src/linux/: Condition.cpp  Mutex.cpp  Path.cpp  futex.h
libs/utils/src/win32/: Path.cpp
